syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyOuterClass";
option objc_class_prefix = "HLW";

package br.com.zup;

service KeyService {
  rpc cadastrar(KeyRequest) returns (KeyResponse){}
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message KeyRequest{
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message KeyResponse{
  string pixId = 1;
}
